# llvm-project

mlir/examples/: CMakeLists.txt
mlir/examples/ksc/: CMakeLists.txt  README.md  main.cpp  test.cpp
mlir/examples/ksc/include/: AST.h  MLIR.h  Parser.h  SymbolTable.h
mlir/examples/ksc/src/: MLIR.cpp  Parser.cpp
mlir/test/: CMakeLists.txt  lit.cfg.py
mlir/test/Examples/Ksc/: build.ks  comments.ks  condition.ks  fold.ks  functions.ks  let.ks  rule.ks  simple.ks  types.ks
